--- a/project1/style.css
+++ b/project1/style.css
@@ -1,96 +1,81 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  overflow: hidden;
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+#bottomGrouping {
+  /* border: black 1px solid; */
+  bottom: 0;
+  left: -0.5rem;
+  position: absolute;
+  background-color: black;
+  height: 3rem;
+  width: 100%;
 }
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
-}
 
-.card {
-  padding: 2em;
+/* For Surface Water Animations */
+#waterSurfaceGrouping {
+  position: absolute;
+  width:100%;
+  height: 100%;
 }
-
-.read-the-docs {
-  color: #888;
+.water {
+  position: absolute;
+  width: 200rem;
+  height: 5rem;
+  left: -100rem;
 }
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+#waterLayer0 {
+  top: 32%;
+  background-image: linear-gradient(to right, blue, aqua);
 }
-button:hover {
-  border-color: #646cff;
+#waterLayer1 {
+  top: 38%;
+  background-image: linear-gradient(to right, aqua, blue);
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+#mainSubject {
+  position: absolute;
+  top: 40%;
+  left: 20%;
+  /* align-self: center; */
+  /* margin: auto; */
+  background-color: black;
+  height: 10rem;
+  width: 40rem;
 }
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+#waterLayer2 {
+  top: 44%;
+  background-image: linear-gradient(to right, blue, aqua);
+}
+#waterLayer3 {
+  top: 50%;
+  background-image: linear-gradient(to right, aqua, blue);
+}
+#waterLayer4 {
+  top: 56%;
+  background-image: linear-gradient(to right, blue, aqua);
+}
+#waterLayer5 {
+  top: 62%;
+  background-image: linear-gradient(to right, aqua, blue);
+}
+#waterLayer6 {
+  top: 68%;
+  background-image: linear-gradient(to right, blue, aqua);
+}
+#waterLayer7 {
+  top: 74%;
+  background-image: linear-gradient(to right, aqua, blue);
+}
+#waterLayer8 {
+  top: 80%;
+  background-image: linear-gradient(to right, blue, aqua);
+}
+#waterLayer9 {
+  top: 86%;
+  background-image: linear-gradient(to right, aqua, blue);
 }
