--- a/project1/style.css
+++ b/project1/style.css
@@ -5,23 +5,45 @@ body {
   height: 100%;
 }
 
+.scroll {
+  /* top: rem; */
+  left: -0.5rem;
+  position:static;
+  overflow-x: auto;
+  white-space: nowrap;
+  height: 100vh;
+  /* height: 100%; */
+  /* width: 500%; */
+  background-color: brown;
+  z-index: 1;
+}
+
+.fill {
+  position: relative;
+  top: 50%;
+  display: inline-block;
+  text-align: center;
+  padding: 14px;
+  text-decoration: none;
+  z-index: 1;
+}
+
 #bottomGrouping {
   /* border: black 1px solid; */
   bottom: 0;
   left: -0.5rem;
-  position: absolute;
+  position: fixed;
   background-color: black;
   height: 3rem;
   width: 100%;
 }
 
-
-
 /* For Surface Water Animations */
 #waterSurfaceGrouping {
-  position: absolute;
+  position: relative;
   width:100%;
-  height: 100%;
+  height: inherit;
+  /* background-color: blueviolet; */
 }
 .water {
   position: absolute;
@@ -39,8 +61,8 @@ body {
 }
 #mainSubject {
   position: absolute;
-  top: 40%;
-  left: 20%;
+  top: 42%;
+  left: 10%;
   /* align-self: center; */
   /* margin: auto; */
   background-color: black;
