--- a/project1/style.css
+++ b/project1/style.css
@@ -18,14 +18,26 @@ body {
   z-index: 1;
 }
 
+#generalFacts {
+  position: relative;
+  top: 2rem;
+  left: 2rem;
+
+  width: 50rem;
+  height: 20rem;
+  background-color: rgba(0, 0, 0, 0.303);
+  z-index: 1;
+}
+
 .fill {
   position: relative;
-  top: 50%;
+  top: 10rem;
+  width: 10rem;
   display: inline-block;
   text-align: center;
   padding: 14px;
   text-decoration: none;
-  z-index: 1;
+  z-index: 2;
 }
 
 #bottomGrouping {
