--- a/project1/style.css
+++ b/project1/style.css
@@ -11,8 +11,8 @@ body {
   /* top: rem; */
   left: -.5rem;
   position:relative;
-  overflow-x:scroll;
-  overflow-y: hidden;
+  /* overflow-x:scroll; */
+  /* overflow-y: hidden; */
   white-space: nowrap;
   height: 100vh;
   /* height: 100%; */
@@ -45,6 +45,7 @@ body {
   position: relative;
   /* top: 2rem;
   left: 2rem; */
+  right: -100rem;
   /* flex-wrap: nowrap; */
   float:left;
   vertical-align: top;
@@ -59,7 +60,7 @@ body {
   /* margin-right: 5rem; */
 }
 
-#generalFacts {
+/* #generalFacts {
   left: 50rem;
 }
 
@@ -81,7 +82,7 @@ body {
 
 #references {
   left: 300rem;
-}
+} */
 
 .fill {
   position: relative;
@@ -97,11 +98,13 @@ body {
 #bottomGrouping {
   /* border: black 1px solid; */
   bottom: 0;
-  left: -0.5rem;
-  position: fixed;
+  left: -5%;
+  /* position: fixed; */
+  position: absolute;
   background-color: black;
   height: 3rem;
-  width: 100%;
+  width: 110%;
+  z-index: 3;
 }
 
 /* For Surface Water Animations */
@@ -113,29 +116,28 @@ body {
   /* background-color: blueviolet; */
 }
 .waterImage {
-  height: 15rem;
+  height: 60rem;
   width: auto;
 }
 .water {
   position: absolute;
   /* width: 200rem; */
   height: 5rem;
-  left: -20rem;
+  left: -150rem;
   z-index: 0;
 }
 #waterLayer0 {
-  top: 32%;
+  top: 38%;
 }
 #waterLayer1 {
-  top: 38%;
+  top: 42%;
 }
 #mainSubject {
   position: absolute;
-  top: 30%;
+  top: 35%;
   /* left: 10%; */
   /* align-self: center; */
   /* margin: auto; */
-  border: 1pc red solid;
   height: fit-content;
   width: fit-content;
 }
@@ -150,27 +152,40 @@ body {
   top: 50%;
 }
 #waterLayer4 {
-  top: 56%;
+  top: 55%;
 }
 #waterLayer5 {
-  top: 62%;
+  top: 60%;
 }
 #waterLayer6 {
-  top: 68%;
+  top: 64%;
 }
 #waterLayer7 {
-  top: 74%;
+  top: 68%;
 }
 #waterLayer8 {
-  top: 80%;
+  top: 74%;
 }
 #waterLayer9 {
-  top: 86%;
+  top: 80%;
 }
 #underwater {
+  left: -5rem;
   top: 95%;
-  background-image: linear-gradient(to bottom, rgba(9, 49, 74, 0.158), rgba(2, 2, 36, 0.837));
-  height: 300rem;
-  width: 150rem;
-  /* background-color: rgba(0, 0, 0, 0.496); */
+  background-image: linear-gradient(to bottom, rgba(31, 113, 208, 0.158), rgba(2, 2, 36, 0.914));
+  height: 200rem;
+  width: 200rem;
+  /* background-color: rgba(255, 0, 0, 0.56); */
+}
+
+.progress {
+  position: absolute;
+  z-index: 3;
+  /* align-self: center; */
+  /* width: 90%; */
+  margin-left: 10%;
+  margin-right: 10%;
+
+  width: 80%;
+  
 }
