--- a/project1/style.css
+++ b/project1/style.css
@@ -3,7 +3,7 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
-  background-color: rgb(31, 113, 208);
+  background-color: rgb(104, 194, 219);
   /* background-color: linear-gradient(to bottom, aqua, navy); */
 }
 
@@ -26,6 +26,7 @@ body {
   display: flex;
   flex-wrap: nowrap;
   flex-direction: row;
+  padding: 0% 30% 0% 0%;
 }
 
 #surfaceInfoTop {
@@ -35,7 +36,7 @@ body {
 }
 
 #surfaceInfoBottom {
-  top: 50%;
+  top: 40%;
   /* bottom: 0; */
   left: 25rem;
   z-index: 2;
@@ -50,7 +51,7 @@ body {
   float:left;
   vertical-align: top;
 
-  width: 50rem;
+  width: 100rem;
   height: 15rem;
   background-color: rgba(255, 255, 255, 0.279);
   border-radius: 5%;
@@ -60,7 +61,7 @@ body {
   /* margin-right: 5rem; */
 }
 
-/* #generalFacts {
+#generalFacts {
   left: 50rem;
 }
 
@@ -82,7 +83,7 @@ body {
 
 #references {
   left: 300rem;
-} */
+}
 
 .fill {
   position: relative;
@@ -171,8 +172,8 @@ body {
 }
 #underwater {
   left: -5rem;
-  top: 95%;
-  background-image: linear-gradient(to bottom, rgba(31, 113, 208, 0.158), rgba(2, 2, 36, 0.914));
+  top: 45%;
+  background-image: linear-gradient(to bottom, rgba(18, 67, 124, 0.318), rgba(2, 2, 36, 0.914));
   height: 200rem;
   width: 200rem;
   /* background-color: rgba(255, 0, 0, 0.56); */
