--- a/project1/style.css
+++ b/project1/style.css
@@ -4,85 +4,89 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgb(104, 194, 219);
-  /* background-color: linear-gradient(to bottom, aqua, navy); */
 }
 
 .scroll {
-  /* top: rem; */
   left: -.5rem;
   position:relative;
-  /* overflow-x:scroll; */
-  /* overflow-y: hidden; */
   white-space: nowrap;
   height: 100vh;
-  /* height: 100%; */
-  /* width: 500%; */
-  /* background-color: brown; */
+  width: fit-content;
   z-index: 2;
 }
 
 .container {
-  /* position: fixed; */
   display: flex;
   flex-wrap: nowrap;
   flex-direction: row;
-  padding: 0% 30% 0% 0%;
+  padding: 0% 50% 0% 0%;
+  /* left: 100rem; */
+  width: 500rem;
 }
 
-#surfaceInfoTop {
+#infoTop {
   top: 0rem;
-  /* left: 2rem; */
   z-index: 1;
 }
 
-#surfaceInfoBottom {
+#infoBottom {
   top: 40%;
-  /* bottom: 0; */
-  left: 25rem;
+  left: 50rem;
   z-index: 2;
+}
+
+p {
+  overflow-wrap: break-all;
+  word-wrap: break-word;
 }
 
 .infoBox {
   position: relative;
-  /* top: 2rem;
-  left: 2rem; */
-  right: -100rem;
-  /* flex-wrap: nowrap; */
   float:left;
   vertical-align: top;
-
-  width: 100rem;
-  height: 15rem;
-  background-color: rgba(255, 255, 255, 0.279);
+  /* height: 15rem; */
+  background-color: rgba(255, 255, 255, 0.496);
   border-radius: 5%;
   z-index: 1;
-  /* padding-left: 30rem; */
-  margin: 2rem;
-  /* margin-right: 5rem; */
+  margin: auto;
+  margin-top: 2rem;
+  overflow-wrap: break-word;
+  /* word-wrap: break-word; */
+  flex-direction: column;
+  text-wrap: wrap;
+  padding: 20px;
+  /* margin-right: 50rem; */
+  align-content: center;
 }
 
 #generalFacts {
-  left: 50rem;
+  flex-basis: 2;
+  width: 20rem;
 }
 
 #habitats {
-  left: 100rem;
+  flex-basis: 2;
+  width: 30rem;
 }
 
 #diets {
-  left: 150rem;
+  flex-basis: 1;
+  width: 20rem;
 }
 
 #threats {
-  left: 200rem;
+  flex-basis: 5;
+  width: 40rem;
 }
 
 #facts {
-  left: 250rem;
+  flex-basis: 4;
+  width: 30rem;
 }
 
 #references {
-  left: 300rem;
+  flex-basis: 3;
+  width: 20rem;
 }
 
 .fill {
@@ -172,7 +176,7 @@ body {
 }
 #underwater {
   left: -5rem;
-  top: 45%;
+  top: 40%;
   background-image: linear-gradient(to bottom, rgba(18, 67, 124, 0.318), rgba(2, 2, 36, 0.914));
   height: 200rem;
   width: 200rem;
@@ -189,4 +193,46 @@ body {
 
   width: 80%;
   
+}
+
+#child1 {
+  position: absolute;
+  top: 70%;
+  left: 40%;
+  /* align-self: center; */
+  /* margin: auto; */
+  height: fit-content;
+  width: fit-content;
+}
+#narwhalSwim1{
+  height: 15rem;
+  width: auto;
+}
+
+.fish {
+  position: absolute;
+  left: 110%;
+}
+
+#fishSwim1 {
+  height: 15rem;
+  width: auto;
+}
+
+#fishSwim2 {
+  height: 10rem;
+  top: 30%;
+  width: auto;
+}
+
+#fishSwim3 {
+  height: 20rem;
+  top: 40%;
+  width: auto;
+}
+
+#fishSwim4 {
+  height: 15rem;
+  top: 60%;
+  width: auto;
 }
